--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vuejs-webpack-project</title>
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   </head>
   <body>
     <div id="app"></div>
